--- a/1.helpinghands.html
+++ b/1.helpinghands.html
@@ -5,7 +5,7 @@
 </head>
     <body>
          <marquee bgcolor="yellow">Due to covid-19 outbreak we may not able to volunteer your complaints right now but after the lockdown we will surely assist you.
-Untill then we will solve which we can.Stay home, Stay safe.</marquee>  
+Untill then we will solve which we can.Stay Home, Stay Safe.</marquee>  
         <header>
             <figure>
        <div class="logo">
